--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
   },
   "homepage": "https://github.com/Spaseski/Membership#readme",
   "devDependencies": {
-    "jshint": "^2.9.5",
+    "grunt": "^1.0.1",
+    "grunt-contrib-jshint": "^1.1.0",
+    "grunt-contrib-watch": "^1.0.0",
     "should": "^13.1.3"
-  }
+  },
+  "dependencies": {}
 }
